==> aws/amazon-freertos/vendors/espressif/boards/esp32/ports/ble/nimble/iot_ble_hal_gatt_server.c <==
#include <string.h>
#include "FreeRTOS.h"
#include "iot_ble_config.h"
#include "host/ble_hs.h"
#include "host/ble_gap.h"
#include "services/gap/ble_svc_gap.h"
#include "services/gatt/ble_svc_gatt.h"
#include "bt_hal_manager_adapter_ble.h"
#include "bt_hal_manager.h"
#include "bt_hal_gatt_server.h"
#include "iot_ble_hal_internals.h"
#define APP_ID          0
#define MAX_SERVICES    20

BTStatus_t prvBTGattServerInit( const BTGattServerCallbacks_t * pxCallbacks )
{
    BTStatus_t xStatus = eBTStatusSuccess;

    ble_hs_cfg.gatts_register_cb = prvGATTRegisterCb;
    serviceCnt = 0;

    memset( espServices, 0, sizeof( struct ble_gatt_svc_def ) * ( MAX_SERVICES + 1 ) );

    if( pxCallbacks != NULL )
    {
        xGattServerCb = *pxCallbacks;
    }
    else
    {
        xStatus = eBTStatusParamInvalid;
    }

    xSem = xSemaphoreCreateBinary();

    if( xSem != NULL )
    {
        semInited = true;
    }
    else
    {
        xStatus = eBTStatusNoMem;
    }

    return xStatus;
}

BTStatus_t prvBTSendIndication( uint8_t ucServerIf,
                                uint16_t usAttributeHandle,
                                uint16_t usConnId,
                                size_t xLen,
                                uint8_t * pucValue,
                                bool bConfirm )
{
    int xESPstatus = 0;
    BTStatus_t xStatus = eBTStatusSuccess;
    struct os_mbuf * om;

    om = ble_hs_mbuf_from_flat( pucValue, xLen );

    if( !om )
    {
        return eBTStatusFail;
    }

    if( bConfirm )
    {
        ESP_LOGD( TAG, "Send Indications" );
        xESPstatus = ble_gattc_indicate_custom( usConnId, usAttributeHandle + gattOffset, om );
    }
    else
    {
        ESP_LOGD( TAG, "Send Notifications" );
        xESPstatus = ble_gattc_notify_custom( usConnId, usAttributeHandle + gattOffset, om );
    }

    if( xESPstatus != 0 )
    {
        xStatus = eBTStatusFail;
    }

    return xStatus;
}

BTStatus_t prvBTSendResponse( uint16_t usConnId,
                              uint32_t ulTransId,
                              BTStatus_t xStatus,
                              BTGattResponse_t * pxResponse )
{
    struct ble_gatt_access_ctxt * ctxt = ( struct ble_gatt_access_ctxt * ) ulTransId;

    BTStatus_t xReturnStatus = eBTStatusSuccess;

    if( prvValidGattRequest() )
    {
        if( ctxt && ( ( ctxt->op == BLE_GATT_ACCESS_OP_READ_CHR ) || ( ctxt->op == BLE_GATT_ACCESS_OP_READ_DSC ) ) )
        {
            /* Huge array allocate in the stack */
            int rc = os_mbuf_append( ctxt->om, pxResponse->xAttrValue.pucValue, pxResponse->xAttrValue.xLen );

            if( rc != 0 )
            {
                xReturnStatus = eBTStatusFail;
            }
        }

        prvGattGiveSemaphore();
    }
    else
    {
        xStatus = eBTStatusFail;
    }

    if( xGattServerCb.pxResponseConfirmationCb != NULL )
    {
        xGattServerCb.pxResponseConfirmationCb( xStatus, pxResponse->usHandle );
    }

    return xReturnStatus;
}

BTStatus_t prvAddServiceBlob( uint8_t ucServerIf,
                              BTService_t * pxService )
{
    uint16_t index;
    uint16_t charCount;
    uint16_t dscrCount;
    struct ble_gatt_chr_def * pCharacteristics = NULL;
    struct ble_gatt_dsc_def * pDescriptors = NULL;
    BTStatus_t xStatus = eBTStatusSuccess;
    ble_uuid_t * uuid;
    struct ble_gatt_svc_def * pSvc = NULL;
    uint16_t handle = 0;
    uint16_t attributeCount = 0;

    if( ( pxService == 0 ) || ( pxService->xNumberOfAttributes == 0 ) )
    {
        configPRINTF( ( "Invalid parameters\n" ) );
        xStatus = eBTStatusFail;
    }

    if( xStatus == eBTStatusSuccess )
    {
        if( serviceCnt < MAX_SERVICES )
        {
            pSvc = &espServices[ serviceCnt ];
            afrServices[ serviceCnt ] = pxService;
        }
        else
        {
            xStatus = eBTStatusNoMem;
        }
    }

    /* Fill in service field. After that start creating characteristics and descriptors individually. */
    if( xStatus == eBTStatusSuccess )
    {
        espServices[ serviceCnt + 1 ].type = BLE_GATT_SVC_TYPE_END;

        /* Initialize starting handle. */
        if( serviceCnt != 0 )
        {
            uint16_t tmpNbAttribute = afrServices[ serviceCnt - 1 ]->xNumberOfAttributes;
            handle = afrServices[ serviceCnt - 1 ]->pusHandlesBuffer[ tmpNbAttribute - 1 ] + 1;
        }
        else
        {
            handle = 0;
        }

        /* Fill in field for ESP service. */
        pxService->pusHandlesBuffer[ attributeCount++ ] = handle;

        if( pxService->pxBLEAttributes[ 0 ].xAttributeType == eBTDbPrimaryService )
        {
            pSvc->type = BLE_GATT_SVC_TYPE_PRIMARY;
        }
        else if( pxService->pxBLEAttributes[ 0 ].xAttributeType == eBTDbSecondaryService )
        {
            pSvc->type = BLE_GATT_SVC_TYPE_SECONDARY;
        }
        else
        {
            configPRINTF( ( "Invalid service type \n" ) );
            xStatus = eBTStatusFail;
        }
    }

    if( xStatus == eBTStatusSuccess )
    {
        pSvc->uuid = prvCopytoESPUUID( &pxService->pxBLEAttributes[ 0 ].xServiceUUID, NULL );

        if( pSvc->uuid == NULL )
        {
            configPRINTF( ( "Could not allocate memory for service UUID \n" ) );
            prvCleanupService( pSvc );
            xStatus = eBTStatusNoMem;
        }
        else
        {
            pCharacteristics = pvPortCalloc( prvCountCharacteristics( pxService ) + 1, sizeof( struct ble_gatt_chr_def ) );

            if( pCharacteristics == NULL )
            {
                configPRINTF( ( "Could not allocate memory for  characteristic array \n" ) );
                prvCleanupService( pSvc );
                xStatus = eBTStatusNoMem;
            }

            pSvc->characteristics = pCharacteristics;
            pSvc->includes = NULL;
            charCount = 0;
            dscrCount = 0;
        }
    }

    /* Create characteristics and descriptor individually .*/
    if( xStatus == eBTStatusSuccess )
    {
        for( index = 0; index < pxService->xNumberOfAttributes; index++ )
        {
            switch( pxService->pxBLEAttributes[ index ].xAttributeType )
            {
                case eBTDbCharacteristic:
                    /* Allocate memory for UUID and copies it. */
                    pCharacteristics[ charCount ].uuid = prvCopytoESPUUID( &pxService->pxBLEAttributes[ index ].xCharacteristic.xUuid, NULL );
                    pCharacteristics[ charCount ].arg = ( void * ) pxService;
                    pCharacteristics[ charCount ].access_cb = prvGATTCharAccessCb;
                    pCharacteristics[ charCount ].flags = prvAFRToESPCharPerm( pxService->pxBLEAttributes[ index ].xCharacteristic.xProperties, pxService->pxBLEAttributes[ index ].xCharacteristic.xPermissions );
                    pCharacteristics[ charCount ].min_key_size = IOT_BLE_ENCRYPT_KEY_SIZE_MIN;

                    /* Allocate memory for descriptors. */
                    pCharacteristics[ charCount ].descriptors = pvPortCalloc( prvCountDescriptor( pxService, index + 1 ) + 1, sizeof( struct ble_gatt_dsc_def ) );

                    if( ( pCharacteristics[ charCount ].uuid == NULL ) || ( pCharacteristics[ charCount ].descriptors == NULL ) )
                    {
                        xStatus = eBTStatusNoMem;
                    }

                    /* Update handle for AFR. */
                    handle += 2;
                    pxService->pusHandlesBuffer[ attributeCount++ ] = handle;

                    charCount++;
                    dscrCount = 0;
                    break;

                case eBTDbIncludedService:
                    handle += 1;
                    pxService->pusHandlesBuffer[ attributeCount++ ] = handle;
                    break;

                case eBTDbDescriptor:
                    uuid = prvCopytoESPUUID( &pxService->pxBLEAttributes[ index ].xCharacteristicDescr.xUuid, NULL );
                    handle += 1;
                    pxService->pusHandlesBuffer[ attributeCount++ ] = handle;

                    if( uuid == NULL )
                    {
                        xStatus = eBTStatusNoMem;
                        break;
                    }

                    /* Characteristic descriptors are automatically added, so no need to add them here, otherwise they will be declared twice. */
                    if( ble_uuid_cmp( uuid, BLE_UUID16_DECLARE( BLE_GATT_DSC_CLT_CFG_UUID16 ) ) == 0 )
                    {
                        continue;
                    }

                    /* Allocate memory for UUID and copies it. */
                    pDescriptors = &pSvc->characteristics[ charCount - 1 ].descriptors[ dscrCount ];
                    /* Allocate memory for UUID and copies it. */
                    pDescriptors->uuid = uuid;
                    pDescriptors->arg = ( void * ) pxService;
                    pDescriptors->access_cb = prvGATTCharAccessCb;
                    pDescriptors->min_key_size = IOT_BLE_ENCRYPT_KEY_SIZE_MIN;
                    pDescriptors->att_flags = prvAFRToESPDescPerm( pxService->pxBLEAttributes[ index ].xCharacteristicDescr.xPermissions );

                    dscrCount++;

                    break;

                default:
                    break;
            }

            /* This loop contains many dynamic allocation. If one fails, clean up and exit. */
            if( xStatus != eBTStatusSuccess )
            {
                configPRINTF( ( "Failed to allocate memory during Attribute creation\n" ) );
                prvCleanupService( pSvc );
                break;
            }
        }
    }

    if( xStatus == eBTStatusSuccess )
    {
        ble_hs_cfg.gatts_register_arg = ( void * ) pxService;
        ble_gatts_reset();
        ble_svc_gap_init();
        ble_svc_gatt_init();

        if( ble_gatts_count_cfg( espServices ) != 0 )
        {
            prvCleanupService( pSvc );
            configPRINTF( ( "Failed to adjust host configuration\n" ) );
            xStatus = eBTStatusFail;
        }
    }

    if( xStatus == eBTStatusSuccess )
    {
        if( ble_gatts_add_svcs( espServices ) != 0 )
        {
            prvCleanupService( pSvc );
            configPRINTF( ( "Failed to add service\n" ) );
            xStatus = eBTStatusFail;
        }
    }

    if( xStatus == eBTStatusSuccess )
    {
        if( ble_gatts_start() != 0 )
        {
            prvCleanupService( pSvc );
            configPRINTF( ( "Failed to start service\n" ) );
            xStatus = eBTStatusFail;
        }
        else
        {
            serviceCnt++;
        }
    }

    return xStatus;
}

static BTStatus_t prvBTConfigureMtu( uint8_t ucServerIf,
                                     uint16_t usMtu )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    esp_err_t xESPStatus;

    xESPStatus = ble_att_set_preferred_mtu( usMtu );

    if( xESPStatus != ESP_OK )
    {
        xStatus = eBTStatusFail;
    }

    return xStatus;
}
