==> aws/amazon-freertos/vendors/nordic/boards/nrf52840-dk/ports/ble/iot_ble_hal_gatt_server.c <==
#include "iot_config.h"
#include <string.h>
#include "bt_hal_manager_adapter_ble.h"
#include "bt_hal_manager.h"
#include "bt_hal_gatt_server.h"
#include "iot_ble_hal_internals.h"
#include "ble.h"
#include "ble_srv_common.h"
#include "nrf_sdh.h"
#include "nrf_sdh_ble.h"
#include "nrf_log.h"
#include "nrf_ble_gatt.h"
#include "iot_ble_hal_dis.h"
#define GATT_MAX_ENTITIES    30

BTStatus_t prvBTGattServerInit( const BTGattServerCallbacks_t * pxCallbacks )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    ret_code_t xErrCode = nrf_ble_gatt_init( &xGattHandler, NULL );

    if( xErrCode == NRF_SUCCESS )
    {
        bGattInitialized = true;
    }

    xStatus = BTNRFError( xErrCode );

    if( xStatus == eBTStatusSuccess )
    {
        if( pxCallbacks != NULL )
        {
            xGattServerCb = *pxCallbacks;
        }
        else
        {
            xStatus = eBTStatusParamInvalid;
        }
    }

    return xStatus;
}

BTStatus_t prvAddServiceBlob( uint8_t ucServerIf,
                              BTService_t * pxService )
{
    uint16_t usIndex = 0;
    BTStatus_t xStatus = eBTStatusSuccess;
    ble_uuid_t ble_uuid;
    ble_add_descr_params_t xDescrParams;
    ble_add_char_params_t xCharParams;
    ret_code_t xErrCode = NRF_SUCCESS;
    ble_gatts_char_handles_t xCharHandle;
    bool isCCD;

    #if _IOT_BLE_TOGGLE_BLOB_CREATE == 1
        for( usIndex = 0; usIndex < pxService->xNumberOfAttributes; usIndex++ )
        {
            switch( pxService->pxBLEAttributes[ usIndex ].xAttributeType )
            {
                case eBTDbPrimaryService:
                    xErrCode = prvAFRUUIDtoNordic( &pxService->pxBLEAttributes[ 0 ].xServiceUUID, &ble_uuid );

                    if( xErrCode == NRF_SUCCESS )
                    {
                        xErrCode = sd_ble_gatts_service_add( BLE_GATTS_SRVC_TYPE_PRIMARY,
                                                             &ble_uuid,
                                                             &pxService->pusHandlesBuffer[ 0 ] );
                    }

                    break;

                case eBTDbSecondaryService:
                    xErrCode = prvAFRUUIDtoNordic( &pxService->pxBLEAttributes[ 0 ].xServiceUUID, &ble_uuid );

                    if( xErrCode == NRF_SUCCESS )
                    {
                        xErrCode = sd_ble_gatts_service_add( BLE_GATTS_SRVC_TYPE_SECONDARY,
                                                             &ble_uuid,
                                                             &pxService->pusHandlesBuffer[ 0 ] );
                    }

                    break;

                case eBTDbIncludedService:
                    break;

                case eBTDbCharacteristicDecl:
                    break;

                case eBTDbCharacteristic:
                    xErrCode = prvBTbuildCharacteristic( &pxService->pxBLEAttributes[ usIndex ].xCharacteristic.xUuid,
                                                         pxService->pxBLEAttributes[ usIndex ].xCharacteristic.xPermissions,
                                                         pxService->pxBLEAttributes[ usIndex ].xCharacteristic.xProperties,
                                                         &xCharParams,
                                                         &ble_uuid );

                    isCCD = false;

                    if( usIndex + 1 < pxService->xNumberOfAttributes )
                    {
                        isCCD = prvIsCCD( pxService, usIndex + 1 );
                    }

                    if( ( xErrCode == NRF_SUCCESS ) && ( isCCD == false ) )
                    {
                        xErrCode = characteristic_add( BLE_GATT_HANDLE_INVALID,
                                                       &xCharParams,
                                                       &xCharHandle );

                        pxService->pusHandlesBuffer[ usIndex ] = xCharHandle.value_handle;
                    }

                    break;

                case eBTDbDescriptor:

                    xErrCode = prvBTbuildDescriptor( &pxService->pxBLEAttributes[ usIndex ].xCharacteristicDescr.xUuid,
                                                     pxService->pxBLEAttributes[ usIndex ].xCharacteristicDescr.xPermissions,
                                                     &xDescrParams,
                                                     &ble_uuid );

                    if( xErrCode == NRF_SUCCESS )
                    {
                        if( prvIsCCD( pxService, usIndex ) == false )
                        {
                            xErrCode = descriptor_add( BLE_GATT_HANDLE_INVALID,
                                                       &xDescrParams,
                                                       &pxService->pusHandlesBuffer[ usIndex ] );
                        }
                        else
                        {
                            if( xDescrParams.write_access == SEC_NO_ACCESS )
                            {
                                xCharParams.cccd_write_access = MAX( SEC_OPEN, xDescrParams.read_access );
                            }
                            else
                            {
                                xCharParams.cccd_write_access = xDescrParams.write_access;
                            }

                            xErrCode = characteristic_add( BLE_GATT_HANDLE_INVALID,
                                                           &xCharParams,
                                                           &xCharHandle );
                            pxService->pusHandlesBuffer[ usIndex - 1 ] = xCharHandle.value_handle;
                            pxService->pusHandlesBuffer[ usIndex ] = xCharHandle.cccd_handle;
                        }
                    }

                    break;

                default:
                    break;
            }

            if( xErrCode != NRF_SUCCESS )
            {
                break;
            }
        }

        return BTNRFError( xErrCode );
    #else /* if _IOT_BLE_TOGGLE_BLOB_CREATE == 1 */
        return eBTStatusUnsupported;
    #endif /* if _IOT_BLE_TOGGLE_BLOB_CREATE == 1 */
}

BTStatus_t prvBTSendIndication( uint8_t ucServerIf,
                                uint16_t usAttributeHandle,
                                uint16_t usConnId,
                                size_t xLen,
                                uint8_t * pucValue,
                                bool bConfirm )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    uint32_t err;
    uint16_t len;

    ble_gatts_hvx_params_t hvx_params;

    memset( &hvx_params, 0, sizeof( hvx_params ) );
    hvx_params.handle = prvGattToSDHandle( usAttributeHandle );
    hvx_params.p_data = pucValue;
    len = xLen;
    hvx_params.p_len = &len;

    if( bConfirm )
    {
        hvx_params.type = BLE_GATT_HVX_INDICATION;
    }
    else
    {
        hvx_params.type = BLE_GATT_HVX_NOTIFICATION;
    }

    err = sd_ble_gatts_hvx( usConnId, &hvx_params );

    if( err != 0 )
    {
        xStatus = eBTStatusFail;
        NRF_LOG_ERROR( 0, "Error %d HVX \n\r", err );
    }

    return xStatus;
}

BTStatus_t prvBTSendResponse( uint16_t usConnId,
                              uint32_t ulTransId,
                              BTStatus_t xStatus,
                              BTGattResponse_t * pxResponse )
{
    BTStatus_t xReturnStatus = eBTStatusSuccess;
    ret_code_t xErrCode = NRF_SUCCESS;
    ble_gatts_rw_authorize_reply_params_t authreply;

    ble_gatts_value_t writereply;

    switch( ulTransId )
    {
        case BLE_GATTS_AUTHORIZE_TYPE_READ:
            authreply.type = BLE_GATTS_AUTHORIZE_TYPE_READ;

            authreply.params.read.len = pxResponse->xAttrValue.xLen;
            authreply.params.read.offset = pxResponse->xAttrValue.usOffset;
            authreply.params.read.p_data = pxResponse->xAttrValue.pucValue;

            authreply.params.read.update = 1; /* NOTE: This flag is considered only on write event */

            if( xStatus == eBTStatusSuccess )
            {
                authreply.params.read.gatt_status = BLE_GATT_STATUS_SUCCESS;
            }
            else
            {
                authreply.params.read.gatt_status = BLE_GATT_STATUS_ATTERR_READ_NOT_PERMITTED;
            }

            xErrCode = sd_ble_gatts_rw_authorize_reply( usConnId, &authreply );

            if( xErrCode != 0 )
            {
                NRF_LOG_ERROR( "Error %d prvBTSendResponse - BLE_GATTS_AUTHORIZE_TYPE_READ \n\r", xErrCode );
            }

            break;

        case BLE_GATTS_AUTHORIZE_TYPE_WRITE:
            authreply.type = BLE_GATTS_AUTHORIZE_TYPE_WRITE;

            authreply.params.write.len = pxResponse->xAttrValue.xLen;
            authreply.params.write.offset = pxResponse->xAttrValue.usOffset;
            authreply.params.write.p_data = pxResponse->xAttrValue.pucValue;

            authreply.params.write.update = 1;

            if( xStatus == eBTStatusSuccess )
            {
                authreply.params.write.gatt_status = BLE_GATT_STATUS_SUCCESS;
            }
            else
            {
                authreply.params.write.gatt_status = BLE_GATT_STATUS_ATTERR_WRITE_NOT_PERMITTED;
            }

            xErrCode = sd_ble_gatts_rw_authorize_reply( usConnId, &authreply );

            if( xErrCode != NRF_SUCCESS )
            {
                NRF_LOG_ERROR( "Error %d prvBTSendResponse - BLE_GATTS_AUTHORIZE_TYPE_WRITE \n\r", xErrCode );
            }

            break;

        case 0:
            xStatus = eBTStatusSuccess;

            break;

        default:
            ;
    }

    xReturnStatus = BTNRFError( xErrCode );

    if( xGattServerCb.pxResponseConfirmationCb != NULL )
    {
        xGattServerCb.pxResponseConfirmationCb( xStatus, pxResponse->usHandle );
    }

    return xReturnStatus;
}

static BTStatus_t prvBTConfigureMtu( uint8_t ucServerIf,
                                     uint16_t usMtu )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    ret_code_t xNRFstatus = NRF_SUCCESS;

    nrf_ble_gatt_t * pxGattHandler = prvGetGattHandle();

    xNRFstatus = nrf_ble_gatt_att_mtu_periph_set( pxGattHandler, usMtu );
    xStatus = BTNRFError( xNRFstatus );
    return xStatus;
}
